--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(KDiskMark VERSION 1.4.0 LANGUAGES CXX)
+project(kdiskmark VERSION 1.4.1 LANGUAGES CXX)
+
+set(APPLICATION_NAME "KDiskMark")
 
 configure_file(src/cmake.h.in cmake.h)
 include_directories(${PROJECT_BINARY_BIN})
@@ -14,13 +16,32 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CPACK_PACKAGE_VENDOR ${APPLICATION_NAME})
+set(CPACK_PACKAGE_INSTALL_DIRECTORY ${APPLICATION_NAME})
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+set(CPACK_PACKAGE_CONTACT jonmagon@gmail.com)
+set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE)
+
+set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
+set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+set(CPACK_DEBIAN_PACKAGE_GENERATE_SHLIBS_POLICY >=)
+set(CPACK_RPM_FILE_NAME RPM-DEFAULT)
+set(CPACK_RPM_PACKAGE_LICENSE GPLv3)
+set(CPACK_RPM_PACKAGE_GROUP Applications/System)
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "fio (>= 3.0)")
+set(CPACK_RPM_COMPRESSION_TYPE lzma)
+set(CPACK_NSIS_DISPLAY_NAME ${APPLICATION_NAME})
+
 find_package(Qt5 COMPONENTS Widgets LinguistTools REQUIRED)
 
-set(TS_FILES data/translations/KDiskMark_ru_RU.ts data/translations/KDiskMark_de_DE.ts)
+include(CPack)
+include(GNUInstallDirs)
+
+set(TS_FILES data/translations/${PROJECT_NAME}_ru_RU.ts data/translations/${PROJECT_NAME}_de_DE.ts)
 
 qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 
-add_executable(KDiskMark
+add_executable(${PROJECT_NAME}
     ${QM_FILES}
     src/main.cpp
     src/mainwindow.cpp
@@ -40,10 +61,10 @@ add_executable(KDiskMark
     src/global.h
 )
 
-target_link_libraries(KDiskMark PRIVATE Qt5::Widgets)
+target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Widgets)
 
-file(COPY data/icons/kdiskmark.png
-    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/icons/)
+set(ICONS_FILES data/icons/${PROJECT_NAME}.svg data/icons/${PROJECT_NAME}.png)
 
-file(COPY data/icons/kdiskmark.svg
-    DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/icons/)
+install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(FILES ${QM_FILES} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/translations)
+install(FILES ${ICONS_FILES} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/icons)
