--- a/src/cmake.h.in
+++ b/src/cmake.h.in
@@ -2,6 +2,7 @@
 #define CMAKE_H_IN
 
 #define PROJECT_NAME "@PROJECT_NAME@"
+#define APPLICATION_NAME "@APPLICATION_NAME@"
 #define PROJECT_VERSION  "@PROJECT_VERSION@"
 #define PROJECT_VERSION_MAJOR "@PROJECT_VERSION_MAJOR@"
 #define PROJECT_VERSION_MINOR "@PROJECT_VERSION_MINOR@"
