--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ compiler:
   - gcc
 
 before_install:
-  - QT_VERSION_MM=514
-  - QT_VERSION_FULL=5.14.2-xenial
+  - QT_VERSION_MM=59
+  - QT_VERSION_FULL=59-xenial
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-    sudo apt-add-repository --yes ppa:beineri/opt-qt-$QT_VERSION_FULL
+    sudo apt-add-repository --yes ppa:beineri/opt-qt$QT_VERSION_FULL
       && sudo apt-get update -qq
       && sudo apt-get install -qq qt${QT_VERSION_MM}base qt${QT_VERSION_MM}script qt${QT_VERSION_MM}tools
       && export CMAKE_PREFIX_PATH=/opt/qt${QT_VERSION_MM}
