--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.5)
 
 project(kdiskmark VERSION 1.4.2 LANGUAGES CXX)
 
+set(CMAKE_PROJECT_HOMEPAGE_URL "https://github.com/JonMagon/KDiskMark")
+set(CMAKE_PROJECT_DESCRIPTION "A simple open source disk benchmark tool for Linux distros")
+
 set(APPLICATION_NAME "KDiskMark")
 set(DESKTOP_FILE kdiskmark.desktop)
 
