Update .desktop file with italian translation

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -4,8 +4,10 @@ GenericName=KDiskMark
 Comment=A disk drive benchmark tool
 Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
 Comment[ru]=Тестирование производительности диска
+Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Keywords=benchmark;disk;
 Keywords[ru]=производительность;диск;
+Keywords[it]=benchmark;disco;prestazioni;
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
