--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -5,9 +5,11 @@ Comment=A disk drive benchmark tool
 Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
 Comment[ru]=Тестирование производительности диска
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
+Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Keywords=benchmark;disk;
 Keywords[ru]=производительность;диск;
 Keywords[it]=benchmark;disco;prestazioni;
+Keywords[pt_BR]=benchmark;disco;
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
