--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -6,10 +6,12 @@ Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
 Comment[ru]=Тестирование производительности диска
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
+Comment[zh_CN]=磁盘测速工具
 Keywords=benchmark;disk;
 Keywords[ru]=производительность;диск;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
+Keywords[pt_BR]=基准测试;磁盘;
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
