fix: appdata manifest typo

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -11,7 +11,7 @@ Keywords=benchmark;disk;
 Keywords[ru]=производительность;диск;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
-Keywords[pt_BR]=基准测试;磁盘;
+Keywords[zh_CN]=基准测试;磁盘;
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
