add es_MX translations

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -7,11 +7,13 @@ Comment[ru]=Тестирование производительности дис
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Comment[zh_CN]=磁盘测速工具
+Comment[es_MX]=Una herramienta para benchmark de unidades de disco
 Keywords=benchmark;disk;
 Keywords[ru]=производительность;диск;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
 Keywords[zh_CN]=基准测试;磁盘;
+Keywords[es_MX]=benchmark;disco;
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
