--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install extra-cmake-modules qttools5-dev
+        sudo apt-get install extra-cmake-modules qttools5-dev libkf5auth-dev
 
     - name: Build
       run: |
