Update localization files

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -3,17 +3,21 @@ Name=KDiskMark
 GenericName=KDiskMark
 Comment=A disk drive benchmark tool
 Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
-Comment[ru]=Тестирование производительности диска
+Comment[de]=Ein Laufwerke-Benchmark-Tool
+Comment[es_MX]=Una herramienta para benchmark de unidades de disco
+Comment[fr]=Un outil pour mesurer la performance des disques physiques
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
+Comment[ru]=Тестирование производительности накопителей
 Comment[zh_CN]=磁盘测速工具
-Comment[es_MX]=Una herramienta para benchmark de unidades de disco
 Keywords=benchmark;disk;
-Keywords[ru]=производительность;диск;
+Keywords[es_MX]=benchmark;disco;
+Keywords[de]=benchmark;laufwerk;disk
+Keywords[fr]=benchmark;disque;performance;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
+Keywords[ru]=производительность;диск;накопитель;
 Keywords[zh_CN]=基准测试;磁盘;
-Keywords[es_MX]=benchmark;disco;
 Exec=kdiskmark
 Icon=kdiskmark
 Terminal=false
