Add missing semicolons

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -12,7 +12,7 @@ Comment[ru]=Тестирование производительности нак
 Comment[zh_CN]=磁盘测速工具
 Keywords=benchmark;disk;
 Keywords[es_MX]=benchmark;disco;
-Keywords[de]=benchmark;laufwerk;disk
+Keywords[de]=benchmark;laufwerk;disk;
 Keywords[fr]=benchmark;disque;performance;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
@@ -23,4 +23,4 @@ Icon=kdiskmark
 Terminal=false
 StartupNotify=false
 Type=Application
-Categories=System
+Categories=System;
