--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -6,6 +6,7 @@ Comment[cs]=Nástroj pro otestování výkonnosti datového úložiště
 Comment[de]=Ein Laufwerke-Benchmark-Tool
 Comment[es_MX]=Una herramienta para benchmark de unidades de disco
 Comment[fr]=Un outil pour mesurer la performance des disques physiques
+Comment[hu]=Lemezek teljesítményét mérő alkalmazás
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Comment[ru]=Тестирование производительности накопителей
@@ -14,6 +15,7 @@ Keywords=benchmark;disk;
 Keywords[es_MX]=benchmark;disco;
 Keywords[de]=benchmark;laufwerk;disk;
 Keywords[fr]=benchmark;disque;performance;
+Keywords[hu]=benchmark;teljesítmény;mérés;lemez;meghajtó;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
 Keywords[ru]=производительность;диск;накопитель;
