Add turkish language

--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -10,6 +10,7 @@ Comment[hu]=Lemezek teljesítményét mérő alkalmazás
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Comment[ru]=Тестирование производительности накопителей
+Comment[tr]=Disk Sürücü performans ölçüm aracı
 Comment[zh_CN]=磁盘测速工具
 Keywords=benchmark;disk;
 Keywords[es_MX]=benchmark;disco;
@@ -19,6 +20,7 @@ Keywords[hu]=benchmark;teljesítmény;mérés;lemez;meghajtó;
 Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pt_BR]=benchmark;disco;
 Keywords[ru]=производительность;диск;накопитель;
+Keywords[tr]=benchmark;disk;
 Keywords[zh_CN]=基准测试;磁盘;
 Exec=kdiskmark
 Icon=kdiskmark
