Deny opening multiple instances
Closes #88

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     - name: Clone repo
       uses: actions/checkout@v2.2.0
+      with:
+        submodules: recursive
 
     - name: Install dependent apt packages
       if: runner.os == 'Linux'
