--- a/data/dev.jonmagon.kdiskmark.helperinterface.conf
+++ b/data/dev.jonmagon.kdiskmark.helperinterface.conf
@@ -9,7 +9,7 @@
   </policy>
 
   <policy context="default">
-      <allow send_destination="dev.jonmagon.kdiskmark.helper"
+      <allow send_destination="dev.jonmagon.kdiskmark.helperinterface"
            send_interface="dev.jonmagon.kdiskmark.helper"/>
 
   </policy>
