--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install extra-cmake-modules qttools5-dev libkf5auth-dev rpm
+        sudo apt-get install extra-cmake-modules qttools5-dev libpolkit-qt5-1-dev rpm
 
     - name: Build
       run: |
