--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install extra-cmake-modules qttools5-dev libpolkit-qt5-1-dev
+        sudo apt-get install qttools5-dev libpolkit-qt5-1-dev
+        wget http://launchpadlibrarian.net/590905036/extra-cmake-modules_5.92.0-0ubuntu1_amd64.deb
+        sudo dpkg -i extra-cmake-modules_5.92.0-0ubuntu1_amd64.deb
 
     - name: Build
       run: |
