--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -8,6 +8,7 @@ Comment[es_MX]=Una herramienta para benchmark de unidades de disco
 Comment[fr]=Un outil pour mesurer la performance des disques physiques
 Comment[hu]=Lemezek teljesítményét mérő alkalmazás
 Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisiche
+Comment[pl]=Narzędzie do testowania wydajności dysków
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Comment[ru]=Тестирование производительности накопителей
 Comment[tr]=Disk Sürücü performans ölçüm aracı
@@ -18,6 +19,7 @@ Keywords[de]=benchmark;laufwerk;disk;
 Keywords[fr]=benchmark;disque;performance;
 Keywords[hu]=benchmark;teljesítmény;mérés;lemez;meghajtó;
 Keywords[it]=benchmark;disco;prestazioni;
+Keywords[pl]=benchmark;pomiar;wydajność;dysk;napęd;
 Keywords[pt_BR]=benchmark;disco;
 Keywords[ru]=производительность;диск;накопитель;
 Keywords[tr]=benchmark;disk;
