--- a/data/kdiskmark.desktop
+++ b/data/kdiskmark.desktop
@@ -11,6 +11,7 @@ Comment[it]=Uno strumento per misurare le prestazioni di dischi e memorie fisich
 Comment[pl]=Narzędzie do testowania wydajności dysków
 Comment[pt_BR]=Uma ferramenta de benchmark de discos
 Comment[ru]=Тестирование производительности накопителей
+Comment[sv]=Prestandatest för hårddiskar
 Comment[tr]=Disk Sürücü performans ölçüm aracı
 Comment[zh_CN]=磁盘测速工具
 Keywords=benchmark;disk;
@@ -22,6 +23,7 @@ Keywords[it]=benchmark;disco;prestazioni;
 Keywords[pl]=benchmark;pomiar;wydajność;dysk;napęd;
 Keywords[pt_BR]=benchmark;disco;
 Keywords[ru]=производительность;диск;накопитель;
+Keywords[sv]=prestandatest;hårddisk;
 Keywords[tr]=benchmark;disk;
 Keywords[zh_CN]=基准测试;磁盘;
 Exec=kdiskmark
